Added zsh files, modified tmux and vim files

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -20,4 +20,4 @@ set-option -g history-limit 5000
 set -g message-bg red
 set -g message-fg black
 
-if-shell "test -f .tmuxline-snapshot" "source .tmuxline-snapshot"
+if-shell "test -f ~/.tmuxline-snapshot" "source ~/.tmuxline-snapshot"
