--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,6 +2,9 @@
 set -g base-index 1
 setw -g pane-base-index 1
 
+# Don't let the window be renamed automatically; we want to do it manually
+set-option -g allow-rename off
+
 # Keys
 bind k confirm kill-window
 bind r source-file ~/.tmux.conf
