--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -14,7 +14,7 @@ set -g set-titles-string '#(whoami)@#h@#(curl ipecho.net/plain;echo)'
 
 # Opciones
 #set -g status-utf8 on # No longer needed on tmux 2.3
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 set -g status-bg black
 set -g status-fg colour200
 set -g status-left ""
@@ -27,4 +27,10 @@ set-option -g history-limit 5000
 set -g message-bg red
 set -g message-fg black
 
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+
 if-shell "test -f ~/.tmuxline-snapshot" "source ~/.tmuxline-snapshot"
+
+run '~/.tmux/plugins/tpm/tpm'
