--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -14,7 +14,7 @@ set -g set-titles-string '#(whoami)@#h@#(curl ipecho.net/plain;echo)'
 
 # Opciones
 #set -g status-utf8 on # No longer needed on tmux 2.3
-set -g default-terminal "xterm-256color"
+set -g default-terminal "tmux-256color"
 set -g status-bg black
 set -g status-fg colour200
 set -g status-left ""
